--- a/app/views/application/_buy_navbar.html.erb
+++ b/app/views/application/_buy_navbar.html.erb
@@ -1,6 +1,6 @@
 <% if defined?(current_organ) && current_organ %>
   <%= link_to({ controller: 'factory/buy/home' }, class: 'navbar-item') do %>
-    <i class="fa-light fa-basket-shopping"></i>
+    <i class="fa-regular fa-basket-shopping"></i>
     <span><%= t('factory.buy.title') %></span>
   <% end %>
 <% end %>
