--- a/app/views/factory/admin/scenes/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/scenes/_index/_index_tbody.html.erb
@@ -20,9 +20,9 @@
 </td>
 <td>
 <% if model.specialty %>
-  <i class="fa-light fa-check has-text-success"></i>
+  <i class="fa-regular fa-check has-text-success"></i>
 <% else %>
-  <i class="fa-light fa-times has-text-danger"></i>
+  <i class="fa-regular fa-times has-text-danger"></i>
 <% end %>
 </td>
 <td>
