--- a/app/views/factory/admin/scenes/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/scenes/_index/_index_tr.html.erb
@@ -3,7 +3,7 @@
   <td>
     <div data-show-target="item" style="visibility: hidden">
       <%= link_to({ controller: 'produce_plans', scene_id: model.id }, class: 'button is-small is-rounded is-info') do %>
-        <i class="fa-light fa-hammer"></i>
+        <i class="fa-regular fa-hammer"></i>
         <span><%= t('factory.admin.produce_plans.index.title') %></span>
       <% end %>
     </div>
