--- a/app/views/factory/admin/home/_index_item.html.erb
+++ b/app/views/factory/admin/home/_index_item.html.erb
@@ -1,27 +1,27 @@
 <%= link_to({ controller: 'factory/admin/products' }, class: 'weui-cell weui-cell_access') do %>
   <div class="weui-cell__bd">
-    <i class="fa-light fa-gift-card fa-fw has-text-warning"></i>
+    <i class="fa-regular fa-gift-card fa-fw has-text-warning"></i>
     <span><%= t('factory.admin.products.index.title') %></span>
   </div>
   <div class="weui-cell__ft"></div>
 <% end %>
 <%= link_to({ controller: 'factory/admin/parts' }, class: 'weui-cell weui-cell_access') do %>
   <div class="weui-cell__bd">
-    <i class="fa-light fa-gift-card fa-fw has-text-warning"></i>
+    <i class="fa-regular fa-gift-card fa-fw has-text-warning"></i>
     <span><%= t('factory.admin.parts.index.title') %></span>
   </div>
   <div class="weui-cell__ft"></div>
 <% end %>
 <%= link_to({ controller: 'factory/admin/scenes' }, class: 'weui-cell weui-cell_access') do %>
   <div class="weui-cell__bd">
-    <i class="fa-light fa-gift-card fa-fw has-text-warning"></i>
+    <i class="fa-regular fa-gift-card fa-fw has-text-warning"></i>
     <span><%= t('factory.admin.scenes.index.title') %></span>
   </div>
   <div class="weui-cell__ft"></div>
 <% end %>
 <%= link_to({ controller: 'factory/admin/factory_taxons' }, class: 'weui-cell weui-cell_access') do %>
   <div class="weui-cell__bd">
-    <i class="fa-light fa-gift-card fa-fw has-text-warning"></i>
+    <i class="fa-regular fa-gift-card fa-fw has-text-warning"></i>
     <span><%= t('factory.admin.factory_taxons.index.title') %></span>
   </div>
   <div class="weui-cell__ft"></div>
