--- a/app/views/factory/admin/produce_plans/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/produce_plans/_index/_index_tr.html.erb
@@ -3,16 +3,16 @@
   <td>
     <div data-show-target="item" style="visibility: hidden">
       <%= link_to({ action: 'products', id: model.id }, aria: { label: t('factory.admin.produce_plans.products.title') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fa-light fa-cart-flatbed-boxes"></i>
+        <i class="fa-regular fa-cart-flatbed-boxes"></i>
       <% end %>
       <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fa-light fa-circle-info"></i>
+        <i class="fa-regular fa-circle-info"></i>
       <% end %>
       <%= link_to({ action: 'edit', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fa-light fa-pencil"></i>
+        <i class="fa-regular fa-pencil"></i>
       <% end %>
       <%= button_to({ action: 'destroy', id: model.id }, method: :delete, aria: { label: t('.destroy') }, class: 'button is-small is-rounded is-light', form: { data: { turbo_confirm: t('.confirm') } }) do %>
-        <i class="fa-light fa-trash"></i>
+        <i class="fa-regular fa-trash"></i>
       <% end %>
     </div>
   </td>
