--- a/app/views/factory/admin/product_taxons/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_index_tbody.html.erb
@@ -21,13 +21,13 @@
 </td>
 <td>
   <% if @select_ids.include?(model.id) %>
-    <i class="fa-light fa-check has-text-success"></i>
+    <i class="fa-regular fa-check has-text-success"></i>
   <% else %>
-    <i class="fa-light fa-times has-text-gery"></i>
+    <i class="fa-regular fa-times has-text-gery"></i>
   <% end %>
 </td>
 <td>
   <%# link_to({ controller: 'productions', action: 'part', id: model.id }, aria: { label: t('factory.admin.productions.part.title') }, class: 'button is-small is-rounded is-light') do %>
-    <i class="fa-light fa-cube"></i>
+    <i class="fa-regular fa-cube"></i>
   <%# end %>
 </td>
