--- a/app/views/factory/admin/product_taxons/_base/_index_tr.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_index_tr.html.erb
@@ -3,7 +3,7 @@
   <td>
     <div data-show-target="item" style="visibility: hidden">
       <%= link_to({ controller: 'products', action: 'show', id: model.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fa-light fa-circle-info"></i>
+        <i class="fa-regular fa-circle-info"></i>
       <% end %>
     </div>
   </td>
