--- a/app/views/factory/admin/product_taxons/_base/_production.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_production.html.erb
@@ -19,20 +19,20 @@
   <td>
     <% part_provider = model.part_providers.default_where(default_params).take %>
     <% if part_provider %>
-      <i class="fa-light fa-check has-text-success"></i>
+      <i class="fa-regular fa-check has-text-success"></i>
       <%= button_to({ controller: 'productions', action: 'destroy', product_id: part_provider.product_id, id: part_provider.production_id }, method: :delete, aria: { label: t('.provide') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fa-light fa-times"></i>
+        <i class="fa-regular fa-times"></i>
       <% end %>
     <% else %>
       <%= button_to({ controller: 'productions', action: 'provide', product_id: model.product_id, id: model.id, part_taxon_id: @product_taxon.id }, method: :patch, aria: { label: t('.provide') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fa-light fa-tractor"></i>
+        <i class="fa-regular fa-tractor"></i>
       <% end %>
     <% end %>
   </td>
   <td></td>
   <td>
     <%= link_to({ controller: 'productions', action: 'show', product_id: model.product_id, id: model.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fa-light fa-circle-info"></i>
+      <i class="fa-regular fa-circle-info"></i>
     <% end %>
   </td>
 </tr>
