--- a/app/views/factory/admin/product_taxons/_productions/_production_tr.html.erb
+++ b/app/views/factory/admin/product_taxons/_productions/_production_tr.html.erb
@@ -3,13 +3,13 @@
   <td>
     <div>
       <%= link_to({ controller: 'production_plans', product_id: model.product_id, production_id: model.id }, aria: { label: t('factory.admin.production_plans.index.title') }, class: 'button is-small is-success') do %>
-        <i class="fa-light fa-flash"></i>
+        <i class="fa-regular fa-flash"></i>
       <% end %>
       <%= link_to({ controller: 'productions', product_id: model.id }, aria: { label: t('factory.admin.productions.index.title') }, data: { turbo_frame: '_top' }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fa-light fa-clone"></i>
+        <i class="fa-regular fa-clone"></i>
       <% end %>
       <%= link_to({ controller: 'products', action: 'show', id: model.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fa-light fa-circle-info"></i>
+        <i class="fa-regular fa-circle-info"></i>
       <% end %>
     </div>
   </td>
