--- a/app/views/factory/admin/production_items/_actions.html+phone.erb
+++ b/app/views/factory/admin/production_items/_actions.html+phone.erb
@@ -1,9 +1,9 @@
 <%= link_to({ action: 'edit', id: model.id }, class: 'weui-actionsheet__cell') do %>
-  <i class="fa-light fa-pencil"></i>
+  <i class="fa-regular fa-pencil"></i>
   <span><%= t('.edit') %></span>
 <% end %>
 <%= button_to({ action: 'destroy', id: model.id }, method: :delete, class: 'has-text-danger', form: { turbo_confirm: t('.confirm'), class: 'weui-actionsheet__cell weui-actionsheet__cell_warn' }) do %>
-  <i class="fa-light fa-trash"></i>
+  <i class="fa-regular fa-trash"></i>
   <span><%= t('.destroy') %></span>
 <% end %>
 <div
@@ -14,7 +14,7 @@
   class="weui-actionsheet__cell"
 >
   <%= button_to({ action: 'print', id: model.id }, method: :patch) do %>
-    <i class="fa-light fa-print"></i>
+    <i class="fa-regular fa-print"></i>
     <span><%= t('factory.admin.production_items.print.title') %></span>
   <% end %>
 </div>
