--- a/app/views/factory/admin/products/_actions.html.erb
+++ b/app/views/factory/admin/products/_actions.html.erb
@@ -1,13 +1,13 @@
 <%= link_to({ action: 'edit', id: model.id }, class: 'weui-actionsheet__cell') do %>
-  <i class="fa-light fa-pencil"></i>
+  <i class="fa-regular fa-pencil"></i>
   <span><%= t('.edit') %></span>
 <% end %>
 <%= button_to({ action: 'destroy', id: model.id }, method: :delete, data: { confirm: t('.confirm') }, class: 'has-text-danger', form: { class: 'weui-actionsheet__cell weui-actionsheet__cell_warn' }) do %>
-  <i class="fa-light fa-trash"></i>
+  <i class="fa-regular fa-trash"></i>
   <span><%= t('.destroy') %></span>
 <% end %>
 <%= link_to({ controller: 'productions', product_id: model.id }, class: 'weui-actionsheet__cell') do %>
-  <i class="fa-light fa-clone"></i>
+  <i class="fa-regular fa-clone"></i>
   <span><%= model.productions_count %></span>
   <span><%= t('factory.admin.productions.index.title') %></span>
 <% end %>
