--- a/app/views/factory/admin/products/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/products/_index/_index_thead.html.erb
@@ -1,13 +1,13 @@
 <th>
   <%= Factory::Product.human_attribute_name(:product_taxon_id) %>
   <%= link_to({ controller: 'product_taxons' }, aria: { label: '分类设置' }) do %>
-    <i class="fa-light fa-cog"></i>
+    <i class="fa-regular fa-cog"></i>
   <% end %>
 </th>
 <th>
   <span><%= Factory::Product.human_attribute_name(:name) %></span>
   <%= link_to({ controller: 'com/panel/blob_defaults', action: 'add', record_class: 'Product', name: 'logo' }, data: { turbo_frame: 'modal' }, aria: { label: '默认图片' }) do %>
-    <i class="fa-light fa-cog"></i>
+    <i class="fa-regular fa-cog"></i>
   <% end %>
 </th>
 <th>
