--- a/app/views/factory/admin/products/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/products/_index/_index_tr.html.erb
@@ -3,18 +3,18 @@
   <td>
     <div data-show-target="item" style="visibility: hidden">
       <%= link_to({ controller: 'fits', product_id: model.id }, aria: { label: t('factory.admin.fits.index.title') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fa-light fa-gears"></i>
+        <i class="fa-regular fa-gears"></i>
         <span class="pl-1"><%= model.fits_count %></span>
       <% end %>
       <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fa-light fa-circle-info"></i>
+        <i class="fa-regular fa-circle-info"></i>
         <span class="pl-1"><%= model.covers_attachments.size %></span>
       <% end %>
       <%= link_to({ action: 'edit', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fa-light fa-pencil"></i>
+        <i class="fa-regular fa-pencil"></i>
       <% end %>
       <%= button_to({ action: 'destroy', id: model.id }, method: :delete, aria: { label: t('.destroy') }, class: 'button is-small is-rounded is-light', form: { data: { turbo_confirm: t('.confirm') } }) do %>
-        <i class="fa-light fa-trash"></i>
+        <i class="fa-regular fa-trash"></i>
       <% end %>
     </div>
   </td>
