--- a/app/views/factory/admin/products/index.html.erb
+++ b/app/views/factory/admin/products/index.html.erb
@@ -12,7 +12,7 @@
       <% if taxon.factory_taxon %>
         <span class="has-text-grey"><%= taxon.factory_taxon.name %></span>
         <%= link_to({ controller: 'product_taxons', action: 'import', id: taxon.id }, aria: { label: t('factory.admin.product_taxons.import.title') }) do %>
-          <i class="fa-light fa-sign-in-alt"></i>
+          <i class="fa-regular fa-sign-in-alt"></i>
         <% end %>
       <% end %>
       </p>
