--- a/app/views/factory/base/_produce_on_bar.html+phone.erb
+++ b/app/views/factory/base/_produce_on_bar.html+phone.erb
@@ -3,7 +3,7 @@
     <span class="has-text-weight-semibold"><%= @scene.title %></span>
     <span class="has-text-link ">
       <span>切换</span>
-      <i class="fa-light fa-angle-right pl-0"></i>
+      <i class="fa-regular fa-angle-right pl-0"></i>
     </span>
   </span>
   <span class="ml-4" data-controller="weui-dialog" data-weui-dialog-id-value="dialog_produce_on" data-action="click->weui-dialog#toggle">
@@ -13,7 +13,7 @@
     </span>
     <span class="has-text-link">
       <span>切换</span>
-      <i class="fa-light fa-angle-right pl-0"></i>
+      <i class="fa-regular fa-angle-right pl-0"></i>
     </span>
   </span>
 </div>
