--- a/app/views/factory/my/productions/index.html.erb
+++ b/app/views/factory/my/productions/index.html.erb
@@ -19,10 +19,10 @@
             </li>
             <li class="weui-media-box__info__meta">
               <%= link_to edit_my_custom_path(custom), aria: { label: t('.edit') } do %>
-                <i class="fa-light fa-pencil weui-icon"></i>
+                <i class="fa-regular fa-pencil weui-icon"></i>
               <% end %>
               <%= link_to cart_my_custom_path(custom), method: :post, aria: { label: t('.new') } do %>
-                <i class="fa-light fa-plus weui-icon"></i>
+                <i class="fa-regular fa-plus weui-icon"></i>
               <% end %>
             </li>
           </ul>
