--- a/app/views/in/_factory_nav.html.erb
+++ b/app/views/in/_factory_nav.html.erb
@@ -1,7 +1,7 @@
 <div class="menu-label">
-  <span><%= t('factory.buy.title') %></span>
+  <span><%= t('factory.in.title') %></span>
 </div>
 <div class="menu-list">
-  <%= link_to t('factory.buy.trade_items.index.title'), { controller: 'factory/buy/carts' }, class: active_helper(controllers: ['carts'], active: 'is-active') %>
-  <%= link_to t('factory.buy.trade_items.index.title'), { controller: 'factory/buy/trade_items' }, class: active_helper(controllers: ['trade_items'], active: 'is-active') %>
+  <%= link_to t('factory.in.carts.index.title'), { controller: 'factory/buy/carts' }, class: active_helper(controllers: ['carts'], active: 'is-active') %>
+  <%= link_to t('factory.in.items.index.title'), { controller: 'factory/buy/items' }, class: active_helper(controllers: ['items'], active: 'is-active') %>
 </div>
