--- a/app/views/factory/in/produce_plans/_produce_plan.html.erb
+++ b/app/views/factory/in/produce_plans/_produce_plan.html.erb
@@ -11,7 +11,7 @@
     <time><%= model.scene.deliver_finish_at.to_fs(:time) %></time>
   </p>
   <div class="is-flex is-justify-content-center">
-    <%= button_to({ controller: 'factory/buy/carts', action: 'actions', scene_id: model.scene_id, produce_on: model.produce_on }, class: 'button is-light mt-2 pl-0', disabled: model.expired?) do %>
+    <%= button_to({ controller: 'carts', action: 'actions', scene_id: model.scene_id, produce_on: model.produce_on }, class: 'button is-light mt-2 pl-0', disabled: model.expired?) do %>
       <span class="icon">
         <%= image_tag model.scene.logo, class: 'image is-32x32' if model.scene.logo.attached? %>
       </span>
