--- a/app/views/factory/panel/factory_providers/index.html.erb
+++ b/app/views/factory/panel/factory_providers/index.html.erb
@@ -1,4 +1,6 @@
-<%= render layout: 'index_table', locals: { cache_key: Factory::FactoryProvider.column_names.hash } do %>
+<%= render 'button' %>
+
+<%= render layout: 'index_table' do %>
   <%= render partial: 'index_tbody', layout: 'index_tr', collection: @factory_providers, as: :model %>
 <% end %>
 
