--- a/app/views/factory/admin/product_taxons/index.html.erb
+++ b/app/views/factory/admin/product_taxons/index.html.erb
@@ -1,3 +1,5 @@
+<%= render 'button' %>
+
 <%= render layout: 'index_sortable_table' do %>
   <%= render partial: 'index_tbody', layout: 'index_tr', collection: @product_taxons, as: :model %>
 <% end %>
