--- a/app/views/factory/admin/product_taxons/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_index_tbody.html.erb
@@ -14,7 +14,7 @@
   <% model.parts.each do |part| %>
     <tr>
       <td><span class="tag"><%= link_to part.name, { controller: 'products', action: 'show', id: part.id } %></span></td>
-      <td><%= part.price %></td>
+      <td><%# part.price %></td>
     </tr>
   <% end %>
   </table>
