--- a/app/views/admin/_factory_nav.html.erb
+++ b/app/views/admin/_factory_nav.html.erb
@@ -13,3 +13,13 @@
     <%= link_to t('factory.admin.factory_taxons.index.title'), { controller: 'factory/admin/factory_taxons' }, class: active_helper(controllers: ['factory_taxons'], active: 'is-active') %>
   </div>
 </div>
+<div class="<%= active_helper(modules: 'factory/admin', active: 'menu ex-accordion is-active', item: 'menu ex-accordion is-active') %>" data-controller="menu empty">
+  <a class="menu-label" data-action="menu#toggle">
+    <i class="fa-solid fa-store fa-fw"></i>
+    <span><%= t('factory.admin.title') %></span>
+    <i class="fa-solid dropdown"></i>
+  </a>
+  <div class="menu-list" data-empty-target="content">
+    <%= link_to t('factory.in.factory_taxons.index.title'), { controller: 'factory/in/factory_taxons' }, class: active_helper(controllers: ['factory_taxons'], active: 'is-active') %>
+  </div>
+</div>
