--- a/app/views/factory/in/productions/_index/_cart.html.erb
+++ b/app/views/factory/in/productions/_index/_cart.html.erb
@@ -1,19 +1,19 @@
 <% item = current_member.get_item(good_type: model.class_name, good_id: model.id, produce_on: params[:produce_on], scene_id: params[:scene_id]) %>
 
-<%= form_with theme: nil, url: { controller: 'trade/me/items', action: 'update', id: item.id }, method: :patch, class: 'ml-1 button_to' do |f| %>
+<%= form_with theme: nil, url: { controller: 'items', action: 'update', id: item.id }, method: :patch, class: 'ml-1 button_to' do |f| %>
   <%= f.hidden_field :organ_id, value: model.organ_id %>
   <%= f.hidden_field '[item]number', value: item.number - 1 %>
   <%= button_tag do %>
     <i class="fa-solid fa-circle-minus fa-xl has-text-grey"></i>
   <% end %>
 <% end if item && item.number > 1 %>
-<%= button_to({ controller: 'trade/me/items', action: 'destroy', id: item.id }, method: :delete, class: 'mr-1') do %>
+<%= button_to({ controller: 'items', action: 'destroy', id: item.id }, method: :delete, class: 'mr-1') do %>
   <i class="fa-solid fa-circle-minus fa-xl has-text-grey"></i>
 <% end if item && item.number <= 1 %>
 <%= form_with theme: nil, scope: 'item', url: { controller: 'trade/me/items', action: 'update', id: item.id }, method: :patch, data: { controller: 'input' }, class: 'ml-1' do |f| %>
   <%= f.number_field :number, value: item.number, data: { action: 'change->input#form' }, class: 'has-background-light has-text-centered', style: 'width: 30px' %>
 <% end if item %>
-<%= form_with theme: nil, url: { controller: 'trade/me/items', action: 'create' }, class: 'ml-1 button_to' do |f| %>
+<%= form_with theme: nil, url: { controller: 'items', action: 'create' }, class: 'ml-1 button_to' do |f| %>
   <%= f.hidden_field :good_type, value: model.class_name %>
   <%= f.hidden_field :good_id, value: model.id %>
   <%= f.hidden_field :produce_on, value: params[:produce_on] %>
@@ -23,7 +23,7 @@
   <% end %>
 <% end unless item %>
 
-<%= form_with theme: nil, url: { controller: 'trade/me/items', action: 'update', id: item.id }, method: :patch, class: 'ml-1 button_to' do |f| %>
+<%= form_with theme: nil, url: { controller: 'items', action: 'update', id: item.id }, method: :patch, class: 'ml-1 button_to' do |f| %>
   <%= f.hidden_field :organ_id, value: model.organ_id %>
   <%= f.hidden_field '[item]number', value: item.number + 1 %>
   <%= button_tag do %>
