--- a/app/views/factory/in/productions/_index/_index_tr.html.erb
+++ b/app/views/factory/in/productions/_index/_index_tr.html.erb
@@ -2,13 +2,10 @@
   <%= yield %>
   <td>
     <div data-show-target="item" style="visibility: hidden">
-      <%= link_to({ controller: 'products', action: 'show', id: model.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
+      <%= link_to({ action: 'show', id: model.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-regular fa-circle-info"></i>
       <% end %>
     </div>
   </td>
 </tr>
 
-<% if params[:product_id] == model.id.to_s %>
-  <%= render partial: 'production', collection: model.productions, as: :model %>
-<% end %>
