--- a/app/views/factory/in/productions/_index/_cart.html.erb
+++ b/app/views/factory/in/productions/_index/_cart.html.erb
@@ -1,4 +1,4 @@
-<% item = current_member.get_item(good_type: model.class_name, good_id: model.id, produce_on: params[:produce_on], scene_id: params[:scene_id]) %>
+<% item = @cart.organ_item(good_id: model.id, produce_on: params[:produce_on], scene_id: params[:scene_id]) %>
 
 <%= form_with theme: nil, url: { controller: 'items', action: 'update', id: item.id }, method: :patch, class: 'ml-1 button_to' do |f| %>
   <%= f.hidden_field :organ_id, value: model.organ_id %>
