--- a/app/views/factory/in/productions/_index/_index_thead.html.erb
+++ b/app/views/factory/in/productions/_index/_index_thead.html.erb
@@ -2,5 +2,5 @@
 <th><%= Factory::Product.human_attribute_name(:organ_id) %></th>
 <th><%= Factory::Product.human_attribute_name(:parts) %></th>
 <th></th>
-<th></th>
+<th style="width: 7em"></th>
 <th></th>
