--- a/app/views/factory/in/productions/_index/_index_tfoot.html.erb
+++ b/app/views/factory/in/productions/_index/_index_tfoot.html.erb
@@ -3,9 +3,9 @@
     <th colspan="3"></th>
     <th><%= @cart.amount.to_money.format(html_wrap: true).html_safe %></th>
     <th class="has-text-centered">
-      <%= link_to({ controller: 'trade/in/orders', action: 'new', current_cart_id: @cart.id }, class: 'button is-success') do %>
+      <%= link_to({ controller: 'orders', action: 'new', current_cart_id: @cart.id }, class: 'button is-success') do %>
         <i class="fa-regular fa-credit-card"></i>
-        <span class="pl-1"><%= t('trade.in.orders.new.title') %></span>
+        <span class="pl-1"><%= t('factory.in.orders.new.title') %></span>
       <% end %>
     </th>
     <th></th>
