--- a/app/views/factory/admin/production_items/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/production_items/_index/_index_thead.html.erb
@@ -1,4 +1,4 @@
 <th><%= Factory::ProductionItem.human_attribute_name(:id) %></th>
-<th><%= Factory::ProductionItem.human_attribute_name(:qr_code) %></th>
+<th><%= Factory::ProductionItem.human_attribute_name(:code) %></th>
 <th><%= Factory::ProductionItem.human_attribute_name(:state) %></th>
 <th><%= Factory::ProductionItem.human_attribute_name(:came_at) %></th>
