--- a/app/views/factory/admin/production_items/_index/_index_tbody.html+phone.erb
+++ b/app/views/factory/admin/production_items/_index/_index_tbody.html+phone.erb
@@ -1,5 +1,5 @@
 <p class="weui-media-box__desc"><%= model.id %></p>
-<p class="weui-media-box__desc"><%= model.qr_code %></p>
+<p class="weui-media-box__desc"><%= model.code %></p>
 <p class="weui-media-box__desc">
   <%= image_tag model.qrcode_url, class: 'image is-32x32' %>
 </p>
