--- a/app/views/factory/admin/production_items/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/production_items/_index/_index_tbody.html.erb
@@ -1,4 +1,4 @@
 <td><%= model.id %></td>
-<td class="has-text-mono"><%= model.qr_code %></td>
+<td class="has-text-mono"><%= model.code %></td>
 <td><%= model.state_i18n %></td>
 <td><time data-controller="time"><%= model.came_at&.to_fs(:iso8601) %></time></td>
