--- a/app/views/factory/admin/production_items/_show_table.html.erb
+++ b/app/views/factory/admin/production_items/_show_table.html.erb
@@ -3,8 +3,8 @@
   <td><%= @production_item.production_id %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Factory::ProductionItem.human_attribute_name(:qr_code) %></td>
-  <td><%= @production_item.qr_code %></td>
+  <td class="has-text-right"><%= Factory::ProductionItem.human_attribute_name(:code) %></td>
+  <td><%= @production_item.code %></td>
 </tr>
 <tr>
   <td class="has-text-right"><%= Factory::ProductionItem.human_attribute_name(:enter_url) %></td>
