--- a/app/views/factory/productions/_show/_breadcrumb.html+phone.erb
+++ b/app/views/factory/productions/_show/_breadcrumb.html+phone.erb
@@ -1,7 +1,7 @@
 <div class="weui-panel is-borderless">
   <div data-controller="mini-program" class="weui-panel__hd as-bar">
     <%= link_to(action: 'index') do %>
-      <i class="fa-regular fa-angle-left"></i>
+      <i class="fa-solid fa-lg fa-angle-left"></i>
     <% end %>
     <div class="weui-title"><%= @production.name %></div>
     <i class="px-4" style="width: 37.5px"></i>
