--- a/app/views/factory/admin/product_taxons/_base/_production.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_production.html.erb
@@ -32,7 +32,7 @@
   <td></td>
   <td>
     <%= link_to({ controller: 'productions', action: 'show', product_id: model.product_id, id: model.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fa-regular fa-circle-info"></i>
+      <i class="fa-solid fa-circle-info"></i>
     <% end %>
   </td>
 </tr>
