--- a/app/views/factory/admin/productions/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_tbody.html.erb
@@ -42,7 +42,7 @@
   <% end %>
   </div>
   <%= link_to({ action: 'card', id: model.id }, data: { turbo_frame: 'modal', show_target: 'item' }, aria: { label: t('factory.admin.productions.vip.title') }) do %>
-    <i class="fa-regular fa-pencil fa-sm has-text-grey"></i>
+    <i class="fa-solid fa-pencil fa-sm has-text-grey"></i>
   <% end %>
 </td>
 <td>
