--- a/app/views/factory/admin/providers/index.html.erb
+++ b/app/views/factory/admin/providers/index.html.erb
@@ -17,7 +17,7 @@
       <td><%= link_to '编辑', edit_admin_provider_path(provider) %></td>
       <td>
         <%= link_to admin_provider_path(provider), method: :delete, data: { confirm: t('.confirm') }, class: 'button is-small is-rounded is-light' do %>
-          <i class="fa-regular fa-trash"></i>
+          <i class="fa-solid fa-trash"></i>
         <% end %>
       </td>
     </tr>
