--- a/app/views/factory/admin/product_taxons/_productions/_production_tr.html.erb
+++ b/app/views/factory/admin/product_taxons/_productions/_production_tr.html.erb
@@ -9,7 +9,7 @@
         <i class="fa-regular fa-clone"></i>
       <% end %>
       <%= link_to({ controller: 'products', action: 'show', id: model.id }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fa-regular fa-circle-info"></i>
+        <i class="fa-solid fa-circle-info"></i>
       <% end %>
     </div>
   </td>
