--- a/app/views/factory/my/productions/index.html.erb
+++ b/app/views/factory/my/productions/index.html.erb
@@ -22,7 +22,7 @@
                 <i class="fa-solid fa-pencil weui-icon"></i>
               <% end %>
               <%= link_to cart_my_custom_path(custom), method: :post, aria: { label: t('.new') } do %>
-                <i class="fa-regular fa-plus weui-icon"></i>
+                <i class="fa-solid fa-plus weui-icon"></i>
               <% end %>
             </li>
           </ul>
