--- a/app/views/factory/admin/product_taxons/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_taxons/_index/_index_tbody.html.erb
@@ -1,6 +1,6 @@
 <td>
   <div class="is-several">
-    <i class="fa-regular fa-bars fa-fw has-text-grey is-drawable"></i>
+    <i class="fa-solid fa-fw fa-bars has-text-grey is-drawable"></i>
     <%= image_tag model.logo, class: 'image is-32x32' if model.logo.attached? %>
     <span><%= model.name %></span>
   </div>
