--- a/app/views/factory/admin/production_items/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/production_items/_index/_index_tr.html.erb
@@ -5,7 +5,7 @@
       <button class="button is-small is-rounded is-light" data-controller="print" data-print-url-value="<%= url_for(action: 'pdf', id: model.id) %>" data-action="print#doPrint">
         <i class="fa-solid fa-print"></i>
       </button>
-      <%= button_to({ action: 'print', id: model.id }, method: :patch, data: { confirm: t('.confirm') }, aria: { label: t('factory.admin.production_items.print.title') }, class: 'button is-small is-rounded is-light') do %>
+      <%= button_to({ action: 'print', id: model.id }, method: :patch, data: { turbo_confirm: t('.confirm') }, aria: { label: t('factory.admin.production_items.print.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-regular fa-print"></i>
       <% end %>
       <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
