--- a/app/views/factory/panel/scenes/_actions.html.erb
+++ b/app/views/factory/panel/scenes/_actions.html.erb
@@ -2,7 +2,7 @@
   <i class="fa-solid fa-pencil"></i>
   <span><%= t('.edit') %></span>
 <% end %>
-<%= button_to({ action: 'destroy', id: model.id }, method: :delete, data: { confirm: t('.confirm') }, class: 'has-text-danger', form: { class: 'weui-actionsheet__cell weui-actionsheet__cell_warn' }) do %>
+<%= button_to({ action: 'destroy', id: model.id }, method: :delete, data: { turbo_confirm: t('.confirm') }, class: 'has-text-danger', form: { class: 'weui-actionsheet__cell weui-actionsheet__cell_warn' }) do %>
   <i class="fa-solid fa-trash"></i>
   <span><%= t('.destroy') %></span>
 <% end %>
