--- a/app/views/factory/panel/scenes/_index/_index_tr.html.erb
+++ b/app/views/factory/panel/scenes/_index/_index_tr.html.erb
@@ -8,7 +8,7 @@
       <%= link_to({ action: 'edit', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-info') do %>
         <i class="fa-solid fa-pencil"></i>
       <% end %>
-      <%= button_to({ action: 'destroy', id: model.id }, method: :delete, data: { confirm: t('.confirm') }, aria: { label: t('.destroy') }, class: 'button is-small is-rounded is-danger') do %>
+      <%= button_to({ action: 'destroy', id: model.id }, method: :delete, data: { turbo_confirm: t('.confirm') }, aria: { label: t('.destroy') }, class: 'button is-small is-rounded is-danger') do %>
         <i class="fa-solid fa-trash"></i>
       <% end %>
     </div>
