--- a/app/views/factory/me/production_items/_qrcode/_buttons.html.erb
+++ b/app/views/factory/me/production_items/_qrcode/_buttons.html.erb
@@ -1,9 +1,4 @@
-<div
-  data-controller="scan"
-  data-scan-debug-value="false"
-  data-scan-apis-value="<%= ['scanQRCode'].to_json %>"
-  data-scan-options-value="<%= current_js_app&.js_config(request.original_url).to_json %>"
->
+<div data-controller="scan" data-scan-debug-value="false">
   <div class="buttons are-large is-centered">
     <button class="button is-success" data-action="scan#report" data-report-url="<%= url_for(controller: 'factory/me/production_items', action: 'in', id: @production_item.id) %>">入库/入仓/装货</button>
     <button class="button is-info" data-action="scan#report" data-report-url="<%= url_for(controller: 'factory/me/production_items', action: 'out', id: @production_item.id) %>">出库/出仓/卸货</button>
