--- a/app/views/factory/in/carts/_list/_index_tbody.html.erb
+++ b/app/views/factory/in/carts/_list/_index_tbody.html.erb
@@ -13,12 +13,12 @@
     <% end %>
     <span><%= trade_item.good_name %></span>
     <span><%= trade_item.produce_on %></span>
-    <span><%= trade_item.single_price.to_money.format(html_wrap: true).html_safe %></span>
-    <span><%= trade_item.amount.to_money.format(html_wrap: true).html_safe %></span>
+    <span><%= trade_item.single_price.to_money.format.html_safe %></span>
+    <span><%= trade_item.amount.to_money.format.html_safe %></span>
   </div>
 <% end %>
 </td>
-<td><%# model.amount.to_money.format(html_wrap: true).html_safe %></td>
+<td><%# model.amount.to_money.format.html_safe %></td>
 <td>
   <%= render partial: 'cart', locals: { model: @production, member: model, trade_item: model.trade_items.find(&->(i){ i.good_type == @production.class_name && i.good_id == @production.id && i.produce_plan_id.to_s == params[:produce_plan_id].to_s }) } if @production %>
 </td>
