--- a/app/views/factory/in/carts/_list/_trade_item.html.erb
+++ b/app/views/factory/in/carts/_list/_trade_item.html.erb
@@ -4,12 +4,12 @@
   <% end %>
   <div class="level-item ml-2">
     <span><%= trade_item.good_name %></span>
-    <span class="ml-2"><%= trade_item.single_price.to_money.format(html_wrap: true).html_safe %></span>
+    <span class="ml-2"><%= trade_item.single_price.to_money.format.html_safe %></span>
   </div>
 </div>
 <div class="level-right is-flex mt-0">
   <div class="level-item mb-0">
-    <span><%= trade_item.amount.to_money.format(html_wrap: true).html_safe %></span>
+    <span><%= trade_item.amount.to_money.format.html_safe %></span>
   </div>
   <div class="level-item ml-2">
     <%= render partial: 'cart', locals: { trade_item: trade_item } %>
