--- a/app/views/factory/in/productions/_index/_tab_bar_cart.html.erb
+++ b/app/views/factory/in/productions/_index/_tab_bar_cart.html.erb
@@ -6,7 +6,7 @@
       </i>
     <% end %>
     <div class="level-item pl-4 is-align-items-baseline">
-      <%= current_cart.amount.to_money.format(html_wrap: true).html_safe %>
+      <%= current_cart.amount.to_money.format.html_safe %>
     </div>
   </div>
   <div class="level-right mt-0 pr-4">
