--- a/app/views/factory/productions/index.html+phone.erb
+++ b/app/views/factory/productions/index.html+phone.erb
@@ -5,7 +5,7 @@
   <span><%= current_organ.address_detail %></span>
 </div>
 
-<div class="weui-flex is-align-items-flex-start is-flex-grow-1" style="margin-bottom: -1rem">
+<div class="weui-flex is-align-items-flex-start is-flex-grow-1">
   <%= render 'menu' unless @produce_plan %>
   <div
     data-controller="page"
