--- a/app/views/factory/admin/productions/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_tr.html.erb
@@ -4,19 +4,19 @@
     <div data-show-target="item" style="visibility: hidden">
       <div>
         <%= link_to({ controller: 'production_plans', production_id: model.id }, aria: { label: t('factory.admin.production_plans.index.title') }, class: 'button is-small is-rounded is-info') do %>
-          <i class="fa-regular fa-list-timeline"></i>
+          <i class="fa-solid fa-list-timeline"></i>
         <% end %>
         <%= link_to({ controller: 'production_items', production_id: model.id }, aria: { label: t('factory.admin.production_items.index.title') }, class: 'button is-small is-rounded is-info') do %>
-          <i class="fa-regular fa-list"></i>
+          <i class="fa-solid fa-list"></i>
         <% end %>
         <%= link_to({ controller: 'trade_items', production_id: model.id }, aria: { label: t('factory.admin.trade_items.index.title') }, class: 'button is-small is-rounded is-success') do %>
-          <i class="fa-regular fa-shopping-cart"></i>
+          <i class="fa-solid fa-shopping-cart"></i>
         <% end %>
         <%= link_to({ controller: 'part_providers', production_id: model.id }, aria: { label: t('factory.admin.part_providers.index.title') }, class: 'button is-small is-rounded is-danger') do %>
-          <i class="fa-regular fa-hand-holding"></i>
+          <i class="fa-solid fa-hand-holding"></i>
         <% end %>
         <%= link_to({ controller: 'addresses', production_id: model.id }, aria: { label: t('factory.admin.addresses.index.title') }, class: 'button is-small is-rounded is-warning') do %>
-          <i class="fa-regular fa-map-marker-alt"></i>
+          <i class="fa-solid fa-map-marker-alt"></i>
         <% end %>
       </div>
       <div class="mt-2">
