--- a/app/views/factory/admin/products/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/products/_index/_index_tbody.html.erb
@@ -31,7 +31,7 @@
   <% end %>
   <p>
     <%= link_to({ controller: 'product_part_taxons', product_id: model.id }, aria: { label: t('factory.admin.product_part_taxons.index.title') }, class: 'button is-small is-rounded is-light') do %>
-      <i class="fa-regular fa-tree"></i>
+      <i class="fa-solid fa-tree"></i>
     <% end %>
   </p>
 </td>
