--- a/app/views/factory/admin/produce_plans/_products/_index_tbody.html.erb
+++ b/app/views/factory/admin/produce_plans/_products/_index_tbody.html.erb
@@ -1,6 +1,6 @@
 <% production_plan = @production_plans.find(&->(i){ i.production_id == model.id }) %>
 <td><%= link_to model.name, { controller: 'productions', action: 'index', product_id: model.product_id, id: model.id }, text: true %></td>
-<td><%= model.price.to_money.format(html_wrap: true).html_safe %></td>
+<td><%= model.price.to_money.format.html_safe %></td>
 <td>
   <div class="is-flex is-align-items-center">
     <%= button_to({ controller: 'production_plans', action: 'update', production_id: model.id, id: production_plan.id }, method: :patch, params: { '[production_plan]planned_count': production_plan.planned_count - 1 }, class: 'mr-1') do %>
