--- a/app/views/factory/productions/_base/_product_part_taxon.html.erb
+++ b/app/views/factory/productions/_base/_product_part_taxon.html.erb
@@ -9,7 +9,7 @@
   <% product_part_taxon.parts.each do |part| %>
     <label class="button is-small mb-2 <%= @production.part_ids.include?(part.id) ? 'is-success' : 'is-light' %>" for="part_<%= part.id %>"<%= product_part_taxon.disabled?(@production.part_ids, part) ? ' disabled' : '' %>>
       <span><%= part.name %></span>
-      <span class="weui-btn__extra"><%= part.price.to_money.format(html_wrap: true).html_safe %></span>
+      <span class="weui-btn__extra"><%= part.price.to_money.format.html_safe %></span>
       <%= hidden_field_tag 'production[part_ids][]', part.id, form: 'edit_custom', data: { part_taxon_id: product_part_taxon.part_taxon_id }, id: nil if @production.part_ids.include?(part.id) && product_part_taxon.disabled?(@production.part_ids, part) %>
       <%= check_box_tag 'production[part_ids][]', part.id, @production.part_ids.include?(part.id), disabled: product_part_taxon.disabled?(@production.part_ids, part), data: { action: 'custom#toggle', part_taxon_id: product_part_taxon.part_taxon_id }, class: 'weui-check', id: "part_#{part.id}", form: 'edit_custom' %>
     </label>
