--- a/app/views/factory/panel/factory_taxons/_index/_index_tbody.html.erb
+++ b/app/views/factory/panel/factory_taxons/_index/_index_tbody.html.erb
@@ -6,6 +6,6 @@
 </td>
 <td>
   <%= link_to({ controller: 'factory_providers', factory_taxon_id: model.id }, aria: { label: t('factory.panel.factory_providers.index.title') }, class: 'button is-small is-rounded is-light') do %>
-    <i class="fa-regular fa-industry"></i>
+    <i class="fa-solid fa-industry"></i>
   <% end %>
 </td>
