--- a/app/views/factory/panel/brands/_index/_index_tr.html.erb
+++ b/app/views/factory/panel/brands/_index/_index_tr.html.erb
@@ -3,7 +3,7 @@
   <td>
     <div data-show-target="item" style="visibility: hidden">
       <%= link_to({ controller: 'serials', brand_id: model.id }, aria: { label: t('factory.panel.serials.index.title') }, class: 'button is-small is-rounded is-light') do %>
-        <i class="fa-regular fa-sitemap"></i>
+        <i class="fa-solid fa-sitemap"></i>
       <% end %>
       <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-solid fa-circle-info"></i>
