--- a/app/views/factory/admin/product_taxons/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_taxons/_index/_index_tbody.html.erb
@@ -9,7 +9,7 @@
   <% if model.factory_taxon %>
     <%= link_to model.factory_taxon.name, { controller: 'factory_taxons', action: 'show', id: model.factory_taxon_id }, text: true %>
     <%= link_to({ action: 'import', id: model.id }, aria: { label: t('factory.admin.product_taxons.import.title') }, class: 'has-text-success') do %>
-      <i class="fa-regular fa-sign-in-alt"></i>
+      <i class="fa-solid fa-sign-in-alt"></i>
     <% end %>
   <% end %>
 </td>
