both product taxon and products

--- a/app/views/factory/admin/product_hosts/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/product_hosts/_index/_index_thead.html.erb
@@ -1,4 +1,10 @@
 <th>
+  <%= Factory::Product.human_attribute_name(:product_taxon_id) %>
+  <%= link_to({ controller: 'product_taxons' }, aria: { label: '分类设置' }) do %>
+    <i class="fa-solid fa-cog"></i>
+  <% end %>
+</th>
+<th>
   <span><%= Factory::Product.human_attribute_name(:name) %></span>
   <%= link_to({ controller: 'com/panel/blob_defaults', action: 'add', record_class: 'Product', name: 'logo' }, data: { turbo_frame: 'modal' }, aria: { label: '默认图片' }) do %>
     <i class="fa-solid fa-cog"></i>
@@ -8,6 +14,7 @@
   <p><%= Factory::Product.human_attribute_name(:brand_id) %></p>
   <p><%= Factory::Product.human_attribute_name(:serial_id) %></p>
 </th>
+<th><%= Factory::Product.human_attribute_name(:profit_margin) %></th>
 <th>
   <p><%= Factory::Product.human_attribute_name(:min_price) %></p>
   <p><%= Factory::Product.human_attribute_name(:max_price) %></p>
