hidden which has icons

--- a/app/views/admin/_factory_nav.html.erb
+++ b/app/views/admin/_factory_nav.html.erb
@@ -19,7 +19,7 @@
     <i class="fa-solid dropdown"></i>
   </a>
   <div class="menu-list" data-empty-target="content">
-    <%= link_to t('factory.in.factory_taxons.index.title'), { controller: 'factory/in/factory_taxons' }, class: active_helper(controllers: ['factory_taxons'], active: 'is-active') %>
+    <%= link_to t('factory.in.productions.index.title'), { controller: 'factory/in/productions' }, class: active_helper(controllers: ['productions'], active: 'is-active') %>
     <%= link_to t('factory.in.carts.index.title'), { controller: 'factory/in/carts' }, class: active_helper(controllers: ['carts'], active: 'is-active') %>
     <%= link_to t('factory.in.items.index.title'), { controller: 'factory/in/items' }, class: active_helper(controllers: ['items'], active: 'is-active') %>
   </div>
