--- a/app/views/factory/me/production_items/_qrcode/_production_item.html.erb
+++ b/app/views/factory/me/production_items/_qrcode/_production_item.html.erb
@@ -5,8 +5,8 @@
       <span class="weui-form-preview__value"><%= @production_item.production.name %></span>
     </div>
     <div class="weui-form-preview__item">
-      <label class="weui-form-preview__label"><%= Factory::ProductionItem.human_attribute_name(:qr_code) %></label>
-      <span class="weui-form-preview__value"><%= @production_item.qr_code %></span>
+      <label class="weui-form-preview__label"><%= Factory::ProductionItem.human_attribute_name(:code) %></label>
+      <span class="weui-form-preview__value"><%= @production_item.code %></span>
     </div>
     <div class="weui-form-preview__item">
       <label class="weui-form-preview__label"><%= Factory::ProductionItem.human_attribute_name(:came_at) %></label>
